--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://{username}.github.io",
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --mode development --watch --open --hot",
@@ -13,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^4.3.0",
+    "gh-pages": "^4.0.0",
     "jest-junit": "^11.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
